# RustProjects

crud-project/: .env  Cargo.toml  Readme.md
crud-project/docker/: docker-compose.yml  init.sql
crud-project/src/: controller.rs  main.rs  model.rs  user_service.rs
get_request/: Cargo.toml
get_request/src/: main.rs
paytm_backend/: .env  Cargo.toml
paytm_backend/src/: account.rs  auth.rs  custom_extractor.rs  db.rs  handler.rs  main.rs  models.rs
pied_piper/: Cargo.toml
pied_piper/src/: main.rs
resto-warp/app-server/: .gitignore  Cargo.toml  restaurent.db
resto-warp/client-server/: Cargo.toml
resto-warp/client-server/src/: main.rs
uniswap-automated-market-maker/: Cargo.toml  README.MD
uniswap-automated-market-maker/src/: balance.rs  controller.rs  main.rs  market_maker_services.rs  models.rs
