[package]
name = "crud-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres","macros", "runtime-tokio", "tls-native-tls" ] }
