[package]
name = "paytm_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = {version = "1.36.0", features = ["full"]}
futures = "0.3"
axum = "0.7.5"
axum-extra = { version = "0.9", features = ["typed-header"] }


# JSON Parsing
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
axum-macros = "0.4.1"

mongodb = "3.0.1"
uuid = "1.8.0"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
rand = "0.8.5"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }

anyhow = "1.0.86"
http = "1.1.0"
