[package]
name = "client-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.197"
rand = "0.8.5"

serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
